--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -16,3 +16,69 @@ h4 .homeitem {
 h5 .homeitem {
 	align: center;
 }
+
+.round-button {
+	width:25%;
+}
+.round-button-circle {
+	width: 100%;
+	height:0;
+	padding-bottom: 100%;
+    border-radius: 50%;
+	border:5px solid #cfdcec;
+    overflow:hidden;
+    
+    background: #4679BD; 
+    box-shadow: 0 0 3px gray;
+}
+.round-button-circle:hover {
+	background:#30588e;
+}
+.round-button a {
+    display:block;
+	float:left;
+	width:100%;
+	padding-top:50%;
+    padding-bottom:50%;
+	line-height:1em;
+	margin-top:-0.5em;
+    
+	text-align:center;
+	color:#e2eaf3;
+    font-family:Arial;
+    font-size:15px;
+    text-decoration:none;
+}
+
+.round-button-clicked {
+	width:25%;
+}
+.round-button-clicked-circle {
+	width: 100%;
+	height:0;
+	padding-bottom: 100%;
+    border-radius: 50%;
+	border:5px solid #1c0015;
+    overflow:hidden;
+    
+    background: #ac282f; 
+    box-shadow: 0 0 3px gray;
+}
+.round-button-clicked-circle:hover {
+	background:#30588e;
+}
+.round-button-clicked a {
+    display:block;
+	float:left;
+	width:100%;
+	padding-top:50%;
+    padding-bottom:50%;
+	line-height:1em;
+	margin-top:-0.5em;
+    
+	text-align:center;
+	color:#e2eaf3;
+    font-family:Arial;
+    font-size:15px;
+    text-decoration:none;
+}
