--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,12 +1,20 @@
-
-table {
+table.home {
 	table-layout: fixed;
-	padding: 1px;
+	padding: 15px;
 }
 
-tr td {
+tr.tbl {
 	padding: 15px;
 	align: center;
+}
+
+td.tbl {
+	padding: 15px;
+	align: center;
+}
+
+td.kyc {
+	padding-right: 20px;
 }
 
 table .notif {
