--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -128,3 +128,27 @@ h5 .homeitem {
 #ex1Slider .slider-selection {
 	background: #BABABA;
 }
+
+growl-notifications {
+	position: fixed;
+	top: 0px;
+	left: 10px;
+	z-index: 1000
+}
+
+growl-notifications growl-notification {
+	background: white;
+	padding: 15px 30px;
+	width: 100%;
+	display: block;
+	border-radius: 5px;
+	margin-top: 15px;
+	border: 1px solid #eeeeee;
+	border-left-width: 5px;
+	border-radius: 3px;
+	border-left-color: #f0ad4e
+}
+
+growl-notifications growl-notification:first-child {
+	margin-top: 0
+}
